k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-app
  labels:
    app.kubernetes.io/part-of: devops-course-project
