k8s/04-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: devops-app
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
