k8s/08-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-service
  namespace: devops-app
spec:
  selector:
    app: worker
  ports:
    - port: 5001
      targetPort: 5001
