k8s/10-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: devops-app
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 8080
